# INF2004-AAI2

./: .gitignore  CMakeLists.txt  README.md  SETUP_WIFI.md  config.h  lwipopts.h  wifi_credentials.h.template
include/: fsm.h
include/control/: pid.h
include/drivers/: encoder.h  ir_barcode_scanner.h  ir_line_follower.h  magnetometer.h  motor.h  ultrasonic.h
include/networking/: wifi_mqtt.h
src/: fsm.c  main.c
src/control/: pid.c
src/drivers/: encoder.c  ir_barcode_scanner.c  ir_line_follower.c  magnetometer.c  motor.c  ultrasonic.c
src/networking/: wifi_mqtt.c
testcomponent/: fsm_MQTT.c  fsm_US.c  fsm_demo1.c  fsm_magnetometer.c  fsm_pid.c
